# ESP32-S3-DevKitC-1_Zephyr

./: BT.config  CMakeLists.txt  Kconfig  NoBT.config  README.md  esp32s3_devkitc_procpu.overlay  prj.conf  sysbuild.conf
boards/: esp32s3_devkitc_procpu.overlay
esp32s3-zephyr-skills/: SKILL.md
esp32s3-zephyr-skills/references/: build-and-flash.md  devicetree-guide.md  hardware-reference.md  peripheral-examples.md  project-template.md
include/: lcd_lvgl_thread.h  led_control.h  lvgl_benchmark_thread.h  wifi_weather_thread.h
src/: bt_beacon_thread.c  bt_broadcaster_thread.c  bt_bthome_sensor_thread.c  bt_ibeacon_thread.c  bt_peripheral_nus_thread.c  bt_peripheral_thread.c  button_thread.c  lcd_lvgl_thread.c  led_thread.c  lvgl_benchmark_thread.c  main.c  memory_thread.c  wifi_weather_thread.c
src/fonts/: weather_chinese_font.c
src/images/: README.md  cyberpunk_240x280.c  example_image.h  happy.c  happy_240x280.c  sbpk_240x280.c  zephyr_200x116.c  zephyr_200x116.h
sysbuild/: mcuboot.conf  mcuboot.overlay
